Fix document links

--- a/biomex/documents.html
+++ b/biomex/documents.html
@@ -40,20 +40,20 @@
 
                     <h2>Biomex</h2>
                     <ul>
-                        <li><a href="/documents/Biomex - catalogue and aplication.pdf">Biomex - catalogue and aplication</a></li>
-                        <li><a href="/documents/Biomex - description.pdf">Biomex - description</a></li>
+                        <li><a href="documents/Biomex - catalogue and aplication.pdf">Biomex - catalogue and aplication</a></li>
+                        <li><a href="documents/Biomex - description.pdf">Biomex - description</a></li>
                     </ul>
 
                     <hr class="major" />
 
                     <h2>MSDS</h2>
                     <ul>
-                        <li><a target="_blank" href="/documents/MSDS BIOMEX HDI.pdf">MSDS BIOMEX HDI</a></li>
-                        <li><a target="_blank" href="/documents/MSDS BIOMEX Power Cleaner.pdf">MSDS BIOMEX Power Cleaner</a></li>
-                        <li><a target="_blank" href="/documents/MSDS Bional Desca.pdf">MSDS Bional Desca</a></li>
-                        <li><a target="_blank" href="/documents/MSDS Biox 256.pdf">MSDS Biox 256</a></li>
-                        <li><a target="_blank" href="/documents/MSDS Cleaner Extra.pdf">MSDS Cleaner Extra</a></li>
-                        <li><a target="_blank" href="/documents/MSDS DCP 111_2.pdf">MSDS DCP 111_2</a></li>
+                        <li><a target="_blank" href="documents/MSDS BIOMEX HDI.pdf">MSDS BIOMEX HDI</a></li>
+                        <li><a target="_blank" href="documents/MSDS BIOMEX Power Cleaner.pdf">MSDS BIOMEX Power Cleaner</a></li>
+                        <li><a target="_blank" href="documents/MSDS Bional Desca.pdf">MSDS Bional Desca</a></li>
+                        <li><a target="_blank" href="documents/MSDS Biox 256.pdf">MSDS Biox 256</a></li>
+                        <li><a target="_blank" href="documents/MSDS Cleaner Extra.pdf">MSDS Cleaner Extra</a></li>
+                        <li><a target="_blank" href="documents/MSDS DCP 111_2.pdf">MSDS DCP 111_2</a></li>
                     </ul>
 
                     <hr class="major" />
