--- a/biomex/110.html
+++ b/biomex/110.html
@@ -7,7 +7,7 @@
 <html>
 
 <head>
-    <title>Generic - Editorial by HTML5 UP</title>
+    <title>Synergy Plus - Biomex</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="assets/css/main.css" />
@@ -106,7 +106,7 @@
                     <ul class="contact">
                         <li class="fa-envelope-o"><a href="mailto:synergyplusplus@gmail.com">synergyplusplus@gmail.com</a></li>
                         <li class="fa-phone"><a href="tel:+48795710645">+48 795 710 645</a></li>
-                        <li class="fa-home">ul. III Poprzeczna 23<br>04-605 Warszawa, Polska</li>
+                        <li class="fa-home">ul. Koszęcińska 3<br>04-829 Warszawa, Polska</li>
                     </ul>
                 </section>
 
