--- a/biomex/index.html
+++ b/biomex/index.html
@@ -189,7 +189,7 @@
                     <ul class="contact">
                         <li class="fa-envelope-o"><a href="mailto:synergyplusplus@gmail.com">synergyplusplus@gmail.com</a></li>
                         <li class="fa-phone"><a href="tel:+48795710645">+48 795 710 645</a></li>
-                        <li class="fa-home">ul. III Poprzeczna 23<br>04-605 Warszawa, Polska</li>
+                        <li class="fa-home">ul. Koszęcińska 3<br>04-829 Warszawa, Polska</li>
                     </ul>
                 </section>
 
